<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/setting_divider"
        android:dividerPadding="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:showDividers="middle">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_clickable_background"
            android:onClick="onClickChangeServiceState"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/setting_stop_service"
                android:textColor="@android:color/black" />

            <ImageButton
                android:id="@+id/start_stop_service_ib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:src="@drawable/ic_action_start" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_clickable_background"
            android:onClick="onClickShowCommands"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/setting_show_cmd_list"
                android:textColor="@android:color/black" />

            <ImageButton
                android:id="@+id/show_commands_ib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:src="@drawable/ic_action_next" />
        </LinearLayout>

        <Switch
            android:id="@+id/use_trigger_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:background="@drawable/setting_clickable_background"
            android:checked="false"
            android:text="@string/use_trigger" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_clickable_background"
            android:onClick="onClickChangeTrigger"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/setting_trigger"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/trigger_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/command_trigger"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <Switch
            android:id="@+id/show_grid_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:background="@drawable/setting_clickable_background"
            android:checked="false"
            android:text="@string/setting_show_grid" />

        <Switch
            android:id="@+id/auto_close_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:background="@drawable/setting_clickable_background"
            android:checked="false"
            android:text="@string/setting_auto_close_app" />



    </LinearLayout>

</ScrollView>